fix most <body> errors, now the only errors with components are staying rendered if you've been tabbed out for too long.

--- a/src/app/pages/tables/tables.component.css
+++ b/src/app/pages/tables/tables.component.css
@@ -35,6 +35,7 @@
   .painting-table {
     width: 100%;
     border-collapse: collapse;
+    color: #1d1d1f;
   }
 
   .painting-table td {
